--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,7 @@ services:
             - DB_PASSWORD=sage
             - MAIL_ADMIN=admin@admin.com
             - APP_URL=http://localhost:8081
-#        volumes:
-#            - type: volume
-#              source: ./sage2
-#              target: /src/storage
-#              volume:
-#                nocopy: false
+        volumes:
             - ./sage:/src/storage
         depends_on:
             - mariadb
@@ -36,3 +31,6 @@ services:
           - MYSQL_PASSWORD=sage
         volumes:
           - ./sagedb:/var/lib/mysql
+#volumes:
+#  sage: {}
+#  sagedb: {}
