--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
         image: phpmyadmin/phpmyadmin:latest
         container_name: 'phpmyadmin'
         environment:
-            PMA_HOST: mysql
+            PMA_HOST: mariadb
             PMA_PORT: 3306
         ports:
             - '8080:80'
