--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - MAIL_ADMIN=admin@admin.com
             - APP_URL=http://localhost
             - APP_NAME="SAGE - Sistema de Apoio à Gestão de Eventos"
+            - APP_KEY=base64:RypD6DvDDhnoFYB4Uu24grS6ei2d8r8F5NMRF0JXymQ=
             - MAIL_HOST=smtp.googlemail.com
             - MAIL_PORT=587
             - MAIL_FROM_ADDRESS=admin@admin.com
